--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-numpy~=1.19.2
-scikit-learn~=0.23.2
-matplotlib~=3.3.2
-pandas~=0.25.3
+matplotlib=3.3.1
+numpy=1.19.1
+setuptools~=50.3.0
+six~=1.15.0
+pyinstrument~=3.2.0
+numpy~=1.19
